--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -144,13 +144,13 @@
       width: 63%;      
       height: 288px;
       flex-flow: column nowrap;
-      padding-left: 30px;
+      padding-left: 8%;
       align-items: flex-start;            
       justify-content: flex-start;
       .program-sub {
         display: inline-block;
         padding: 15px 0;
-        width: 75%;
+        width: 85%;
       }
       h1 {
         padding-top: 20px;
@@ -160,7 +160,8 @@
     }
     @media screen and (min-width: $tablet_width) {
       width: 53%;      
-      align-items: flex-start;      
+      align-items: flex-start;    
+      padding-left: 20px;        
       .program-sub {
         display: inline-block;
         padding-left: 30px;
@@ -203,7 +204,7 @@
       }
     }
     .front-blog {
-      border: $p_border 4px $white;
+      border: $p_border 4px $blue;
       background: $white;
       @include hover-state {
         border: $p_border 4px;
