--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -95,11 +95,13 @@
   }
 	a:hover {
 		border: 4px solid black;
-	}
+  }
+  .program-title {
+    font-size: $font_m-h1;    
+  }
 	a {
 		color: black;
     text-decoration: none;
-    font-size: 1.4rem;
     width: 80%;
     height: 6rem;
     margin: 1rem;
@@ -246,6 +248,9 @@
   li {
     flex: 0 1 47%;
   }
+  .program-list .program-title {
+    font-size: $font_t-h1;
+  }
 }
 
 @media screen and (min-width: $tablet_width) {
@@ -280,5 +285,8 @@
   }
   .program-back-btn {
     display: none;
+  }
+  .program-list .program-title {
+    font-size: $font_d-h1;
   }
 }
