--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -88,8 +88,11 @@
   width: 100%;
   @media screen and (min-width: $mobile_width) {
     display: flex;
-    padding: 32px 0;
+    padding: 32px;
     justify-content: space-between;
+  }
+  @media screen and (min-width: $tablet_width) {
+    padding: 32px 0;
   }
   .front-program,
   .front-events,
@@ -144,7 +147,7 @@
       width: 63%;      
       height: 288px;
       flex-flow: column nowrap;
-      padding-left: 8%;
+      padding-left: 40px;
       align-items: flex-start;            
       justify-content: flex-start;
       .program-sub {
@@ -159,11 +162,9 @@
       }
     }
     @media screen and (min-width: $tablet_width) {
-      width: 53%;      
-      align-items: flex-start;    
+      width: 53%;        
       padding-left: 20px;        
       .program-sub {
-        display: inline-block;
         padding-left: 30px;
         padding-bottom: 30px;
         width: 95%;
@@ -204,7 +205,7 @@
       }
     }
     .front-blog {
-      border: $p_border 4px $blue;
+      border: $p_border 4px $white;
       background: $white;
       @include hover-state {
         border: $p_border 4px;
@@ -213,6 +214,7 @@
         }
       }
       @media screen and (min-width: $mobile_width) {
+        border: $p_border 4px $blue;        
         width: 100%;
         height: 129px;
         background: $blue;
