--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -1400,9 +1400,12 @@ object {
     .home .program-event-post {
       display: -ms-flexbox;
       display: flex;
-      padding: 32px 0;
+      padding: 32px;
       -ms-flex-pack: justify;
           justify-content: space-between; } }
+  @media screen and (min-width: 1024px) {
+    .home .program-event-post {
+      padding: 32px 0; } }
   .home .program-event-post .front-program,
   .home .program-event-post .front-events,
   .home .program-event-post .front-blog {
@@ -1486,7 +1489,7 @@ object {
         height: 288px;
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
-        padding-left: 8%;
+        padding-left: 40px;
         -ms-flex-align: start;
             align-items: flex-start;
         -ms-flex-pack: start;
@@ -1502,11 +1505,8 @@ object {
     @media screen and (min-width: 1024px) {
       .home .program-event-post .front-program {
         width: 53%;
-        -ms-flex-align: start;
-            align-items: flex-start;
         padding-left: 20px; }
         .home .program-event-post .front-program .program-sub {
-          display: inline-block;
           padding-left: 30px;
           padding-bottom: 30px;
           width: 95%; }
@@ -1541,7 +1541,7 @@ object {
         height: 129px;
         text-align: center; } }
   .home .program-event-post .intro-event-blog .front-blog {
-    border: 2px #000000 solid 4px #45cdcb;
+    border: 2px #000000 solid 4px #ffffff;
     background: #ffffff; }
     .home .program-event-post .intro-event-blog .front-blog:hover, .home .program-event-post .intro-event-blog .front-blog:active, .home .program-event-post .intro-event-blog .front-blog:focus {
       border: 2px #000000 solid 4px; }
@@ -1549,6 +1549,7 @@ object {
         color: #f5a623; }
     @media screen and (min-width: 590px) {
       .home .program-event-post .intro-event-blog .front-blog {
+        border: 2px #000000 solid 4px #45cdcb;
         width: 100%;
         height: 129px;
         background: #45cdcb;
