--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -40,11 +40,17 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  @media screen and (min-width: $mobile_width) {
+    padding: 0 25.5px;
+  }
+  @media screen and (min-width: $tablet_width) {
+    padding: 0;
+  }
   .gallery {
     width: 100%;
     height: 320px;
     margin: 0;
-    margin-top: $margin-d;
+    margin-top: 25.5px;
     @include border;
     .entry-header {
       width: 100%;
