fixed footer position at desktop size

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -249,6 +249,7 @@ span.wpcf7-not-valid-tip {
 @media all and (min-width: $tablet_width) {
   .site-footer {
     max-width: 1024px;
+    margin: 0 auto;
   }
 	.site-info {
 		padding-left: 35px;
