added dashed border to top of footer

--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -141,6 +141,10 @@ span.wpcf7-not-valid-tip {
 }
 
 // Footer
+.site-footer {
+  border-top: 1px dashed lightgray;
+}
+
 .site-info {
 	margin-left: 16px;
 	display: flex;
