--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2708,6 +2708,9 @@ span.wpcf7-not-valid-tip {
 .wpcf7-validation-errors, .wpcf7-mail-sent-ok {
   border: 2px solid #000000 !important; }
 
+.site-footer {
+  border-top: 1px dashed lightgray; }
+
 .site-info {
   margin-left: 16px;
   display: -ms-flexbox;
@@ -2815,7 +2818,8 @@ span.wpcf7-not-valid-tip {
 
 @media all and (min-width: 1024px) {
   .site-footer {
-    max-width: 1024px; }
+    max-width: 1024px;
+    margin: 0 auto; }
   .site-info {
     padding-left: 35px;
     padding-top: 20px;
