--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -67,7 +67,7 @@
   }
   .rectangle {
     height: 208px;
-    max-width: $mobile_width;
+    // max-width: $mobile_width;
     box-sizing: border-box;
     flex-direction: column;
     text-decoration: none;
@@ -102,6 +102,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      width: 80%;
     }
   }
   .rectangle p {
@@ -126,22 +127,34 @@
       padding-bottom: initial;
       margin: 0 auto;
       justify-content: space-between;
-      width: 768px;
+      width: 100%;
       margin-top: 2rem;
       margin-bottom: 28px;
       max-width: none;
       flex-direction: row;
       background-size: 100%;
+      min-height: 393px;
     }
     .rectangle {
       margin-top: initial;
-      height: 280px;
+      min-height: 393px;
       box-sizing: border-box;
-      width: 225px;
+      width: 29.5%;
       background-color: rgba(255, 255, 255, 0.8);
       border: 4px solid rgba(255, 255, 255, 0.0);
       &:hover {
         border: 4px solid $black;
+      }
+      p {
+        display: initial;
+        font-family: $font__body;
+        font-size: $font_d-sub-body;
+        color: black;
+        width: 163px;
+        margin-top: 11px;
+        line-height: 22px;
+        align-content: center;
+        display: flex;
       }
     }
   }
@@ -159,22 +172,15 @@
       padding-bottom: initial;
       margin: 0 auto;
       justify-content: space-between;
-      // width: 1024px;
+      min-height: 615px;
       margin-bottom: 28px;
       width: 1024px;
       flex-direction: row;
       background-size: 100%;
     }
     .rectangle {
-      margin-top: initial;
-      height: 356px;
-      box-sizing: border-box;
-      width: 300px;
-      background-color: rgba(255, 255, 255, 0.8);
-      border: 4px solid rgba(255, 255, 255, 0.0);
-      &:hover {
-        border: 4px solid $black;
-      }
+      width: 29.5%;
+      min-height: 615px;
     }
     .new-member,
     .membership-renewal,
@@ -182,25 +188,13 @@
       h2 {
         font-family: $font__header;
         font-size: $font_d-body;
-        width: 163px;
         height: 58px;
         margin: 38px auto 11px auto;
         text-align: center;
         padding-bottom: 11px;
         line-height: 29px;
+        width: 80%;
       }
-      p {
-        font-family: $font__body;
-        font-size: $font_d-sub-body;
-        color: black;
-        width: 163px;
-        margin: auto;
-        margin-top: 11px;
-        line-height: 22px;
-      }
-    }
-    .rectangle p {
-      display: initial;
     }
   }
 }
