--- a/themes/sgsc/sass/_about.scss
+++ b/themes/sgsc/sass/_about.scss
@@ -1,11 +1,19 @@
 .page-template-page-about {
+  .entry-content {
+    padding: 0;
+    margin: 0;
+    margin-top: 1rem;
+    a {
+    color: $black;
+    text-decoration: none;
+    }
+  }
   .entry-title {
-    height: 50%;
+    height: 7rem;
   }
   .entry-header {
-    max-width: 480px;
     margin: 0 auto;
-    height: 305px;  
+    height: 19rem;  
     position: relative;
     img {
       width: 100%;
@@ -25,10 +33,7 @@
       background: rgba(255,255,255,0.81);
     }
   }
-  .entry-content a {
-    color: $black;
-    text-decoration: none;
-  }
+
   .about-links {
     display: flex;
     flex-flow: column nowrap;
@@ -37,8 +42,9 @@
     text-align: center;
     p {
       font-family: $font__header;
+      font-weight: 500;
       margin: 1rem 0;
-      width: 18rem;
+      width: 80%;
       height: 6rem;
       border: 4px solid $orange;
       background: $orange;
@@ -58,25 +64,29 @@
 
 @media all and (min-width: $mobile_width) {
   .page-template-page-about {
+    .page .site-main {
+      width: initial;
+    }
     .entry-header {
-      max-width: 768px;
-      height: 255px;
+      height: 22.5rem;
       h1 {
         padding: 40px 0;
         font-size: $font_t-h1;
       }
     }
     .entry-content {
-      width: 768px;
       margin: auto;
       margin-top: 1rem;
     }
     .about-links {
-        flex-flow: row wrap;
-        justify-content: space-around;
-        p {
-          width: 19.5rem;
-          height: 7.5rem;
+      flex-flow: row wrap;
+      justify-content: space-evenly;
+      p {
+        width: 40.65%;
+        height: 7.5rem;
+      }
+      p:last-child {
+        width: 88%;
       }
       a {
         font-size: $font_t-h1;
@@ -89,31 +99,32 @@
   .page-template-page-about {
     .entry-header {
       max-width: 1024px;
-      height: 356px; 
+      height: 22.25rem; 
       h1 {
         padding: 45px 0;
         font-size: $font_d-h1;
       }
     }
-    .entry-content {
-      width: 1024px;
-      margin: auto;
-      margin-top: 1rem;
+    .entry-title {
+      height: 10rem;
     }
     .about-links {
       flex-flow: row wrap;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
     .about-links {
       p {
         flex: 0 1 43%;
         height: 10rem;
         margin: 2rem 0;
-        font-size: 2.5rem;
+        font-size: 2.4rem;
+      }
+      p:last-child {
+        flex: 0 1 90.7%;
       }
       a {
         padding: 3rem 3rem;
-        font-size: 2.5rem;
+        font-size: 2.4rem;
       }
     }
   }
