--- a/themes/sgsc/sass/_contact-us.scss
+++ b/themes/sgsc/sass/_contact-us.scss
@@ -48,7 +48,7 @@
       overflow: hidden;
       flex-flow: column wrap;
       p {
-        margin: 18px;
+        margin: 18px 0;
       }
     }
     @media screen and (min-width: $tablet_width) {
