--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -5204,22 +5204,25 @@ article {
     object-fit: cover;
     object-position: 65% 0%;
     position: absolute; }
-  .page-template-page-about-partners .entry-header .entry-title {
-    position: absolute;
-    bottom: 0px;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-        align-items: center;
-    -ms-flex-pack: center;
-        justify-content: center;
-    width: 100%;
-    height: 118px;
-    background: #f5a623;
-    margin-bottom: 0; }
 
-.page-template-page-about-partners .entry-content p {
-  margin: 15px 22px; }
+.page-template-page-about-partners .entry-title {
+  position: absolute;
+  bottom: 0rem;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  width: 100%;
+  height: 118px;
+  background: #f5a623;
+  margin-bottom: 0; }
+
+.page-template-page-about-partners .entry-content {
+  padding: 0; }
+  .page-template-page-about-partners .entry-content p {
+    margin: 15px 22px; }
 
 .page-template-page-about-partners .linkhighlight a {
   color: #5C8EDC;
@@ -5322,15 +5325,19 @@ article {
 
 @media all and (min-width: 590px) {
   .page-template-page-about-partners .entry-header {
-    height: 375px; }
+    height: 265px; }
+    .page-template-page-about-partners .entry-header img {
+      object-position: 45% 0%; }
   .page-template-page-about-partners .entry-content p {
     font-size: 18px; }
   .page-template-page-about-partners .individual-partner, .page-template-page-about-partners .partner-container {
     -ms-flex-preferred-size: 33%;
         flex-basis: 33%; }
   .page-template-page-about-partners .entry-title {
-    bottom: -10rem;
-    height: 10rem; }
+    bottom: -7.5rem;
+    height: 7.5rem; }
+  .page-template-page-about-partners .entry-content {
+    margin-top: 7.5rem; }
   .page-template-page-about-partners .content-area {
     margin-top: 1rem; }
   .page-template-page-about-partners .partner-name {
@@ -5347,6 +5354,11 @@ article {
   .page-template-page-about-partners .entry-header {
     max-width: 1024px;
     height: 375px; }
+  .page-template-page-about-partners .entry-title {
+    bottom: -10rem;
+    height: 10rem; }
+  .page-template-page-about-partners .entry-content {
+    margin-top: 10rem; }
   .page-template-page-about-partners .about-back-btn {
     display: none; } }
 
