--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2771,6 +2771,8 @@ span.wpcf7-not-valid-tip {
 
 @media all and (min-width: 690px) {
   .site-footer {
+    border-top: none; }
+  .site-footer {
     max-width: 768px; }
   .site-info {
     padding-left: 35px;
