--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -3840,7 +3840,8 @@ span.wpcf7-not-valid-tip {
   margin: auto; }
 
 .page-template-page-join-us .entry-content, .post-type-archive-volunteer .entry-content {
-  margin: 0; }
+  margin: 0;
+  padding: 0; }
 
 .page-template-page-join-us .join-us-section, .post-type-archive-volunteer .join-us-section {
   display: -ms-flexbox;
@@ -3853,8 +3854,10 @@ span.wpcf7-not-valid-tip {
   background-repeat: no-repeat;
   min-height: 250px;
   max-height: 750px;
-  padding-bottom: 21px;
+  padding-bottom: 0;
   background-position: 60%; }
+  .page-template-page-join-us .join-us-section div:first-child, .post-type-archive-volunteer .join-us-section div:first-child {
+    margin-top: 17px; }
 
 .page-template-page-join-us .rectangle, .post-type-archive-volunteer .rectangle {
   height: 208px;
@@ -3912,6 +3915,27 @@ span.wpcf7-not-valid-tip {
 .page-template-page-join-us .rectangle p, .post-type-archive-volunteer .rectangle p {
   display: none; }
 
+.page-template-page-join-us .membership-links, .post-type-archive-volunteer .membership-links {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: center;
+      justify-content: center; }
+
+.page-template-page-join-us .links-title, .post-type-archive-volunteer .links-title {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  text-align: center;
+  font-family: montserrat, merriweather, sans-serif;
+  color: #000000;
+  font-size: 16px; }
+  @media all and (min-width: 590px) {
+    .page-template-page-join-us .links-title, .post-type-archive-volunteer .links-title {
+      font-size: 18px; } }
+  .page-template-page-join-us .links-title .link-wrapper, .post-type-archive-volunteer .links-title .link-wrapper {
+    padding: 0 0.25rem; }
+
 .page-template-page-join-us .form-link, .post-type-archive-volunteer .form-link {
   display: initial !important;
   color: black;
@@ -3928,13 +3952,15 @@ span.wpcf7-not-valid-tip {
     -ms-flex-pack: justify;
         justify-content: space-between;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 0;
     margin-bottom: 28px;
     max-width: none;
     -ms-flex-direction: row;
         flex-direction: row;
     background-size: 100%;
     min-height: 393px; }
+    .page-template-page-join-us .join-us-section div:first-child, .post-type-archive-volunteer .join-us-section div:first-child {
+      margin-top: initial; }
   .page-template-page-join-us .rectangle, .post-type-archive-volunteer .rectangle {
     margin-top: initial;
     min-height: 393px;
